--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~8.2.7",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
+    "angular2-flash-messages": "^3.0.1",
     "bootstrap": "^4.3.1",
     "firebase": "^7.0.0",
     "rxjs": "~6.4.0",
